--- a/src/styles/core/_reset.scss
+++ b/src/styles/core/_reset.scss
@@ -7,5 +7,7 @@
 * {
   font-family: "HARRYP", sans-serif;
   box-sizing: border-box;
-  font-weight: large;
+  font-weight: medium;
+  font-size: 25px;
+  margin-left: 0%;
 }
