--- a/src/styles/components/CharacterDetails.scss
+++ b/src/styles/components/CharacterDetails.scss
@@ -2,10 +2,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: solid #6c5c07 3px;
 }
 .link-back {
   position: fixed;
   left: 0;
-  padding-left: 20px;
+  top: 0;
+  padding: 10px 10px 0px 20px;
+}
+
+.card__img {
+  height: 500px;
+  width: 600px;
+}
+.card_title {
   color: #6c5c07;
+  font-size: 40px;
+  padding-bottom: 0px;
+}
+.subtitle {
+  font-size: 40px;
+}
+.card_details {
+  padding-top: 0;
+  margin-top: -50px;
+  margin-bottom: 20px;
 }
