--- a/src/styles/components/Filters.scss
+++ b/src/styles/components/Filters.scss
@@ -3,8 +3,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  color: #6c5c07;
+}
+.input-boxes-name {
+  color: #6c5c07;
 }
 .header-title__sub {
   text-align: center;
   font-size: 30px;
+  color: #6c5c07;
 }
