--- a/src/styles/components/CharacterList.scss
+++ b/src/styles/components/CharacterList.scss
@@ -1,6 +1,11 @@
 .results {
-  padding-left: 15%;
+  align-items: center;
+  margin: 20px 0 20px 10px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+}
+.result-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  // margin-left: 60px;
 }
