--- a/src/styles/components/Filters.scss
+++ b/src/styles/components/Filters.scss
@@ -1,8 +1,9 @@
 .inputs-boxes {
   margin-left: 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  margin-bottom: 10px;
   color: #6c5c07;
 }
 .input-boxes-name {
