--- a/src/styles/components/FilterName.scss
+++ b/src/styles/components/FilterName.scss
@@ -4,3 +4,9 @@
     background-color: #6c5c07;
   }
 }
+.input-boxes_name {
+  margin-bottom: 15px;
+}
+.input-boxes-name {
+  margin-bottom: 15px;
+}
