--- a/src/styles/components/Filters.scss
+++ b/src/styles/components/Filters.scss
@@ -1,5 +1,6 @@
 .inputs-boxes {
   margin-left: 10px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,4 +14,13 @@
   text-align: center;
   font-size: 30px;
   color: #6c5c07;
+}
+@media all and (min-width: 768px) {
+  .input-boxes-name {
+    width: 500px;
+  }
+  .inputs-boxes {
+    align-items: center;
+    border: #6c5c07 solid 3px;
+  }
 }
