--- a/src/styles/components/CharacterDetails.scss
+++ b/src/styles/components/CharacterDetails.scss
@@ -12,8 +12,10 @@
 }
 
 .card__img {
-  height: 500px;
-  width: 600px;
+  // height: 500px;
+  // width: 600px;
+  height: 200px;
+  width: 300px;
 }
 .card_title {
   color: #6c5c07;
